# viewnior

./: .gitignore  0temp.c  Notes.md  README.html  README.md  Readme.md  config.h.in  deprecations.txt  dialog.c  dialog.h  etkwidgetlist.c  etkwidgetlist.h  file.c  file.h  install.sh  list.c  list.h  main.c  meson.build  preferences.c  preferences.h  project.pro  style.css  testcmd.pro  viewnior.pro  window.c  window.h
.cache/clangd/index/: 0temp.c.BBC9C01E166C7DAF.idx  dialog.c.BAB89975B8BAB598.idx  dialog.h.96F994E145934E77.idx  file.h.0B12F8984D67BF8D.idx  list.c.F485EAB2D739565A.idx  list.h.CCFDC2E81E3DEE21.idx  main.c.A27E3203AA0327E4.idx  preferences.c.E20E35824A7A3D12.idx  preferences.h.134203A538655A09.idx  uni-anim-view.h.596C511FF14BF8B4.idx  uni-cache.h.0F812E2B08F80F1E.idx  uni-dragger.h.FBE8B31BBF7B5274.idx  uni-exiv2.cpp.9DA3FBAB98485ED3.idx  uni-exiv2.hpp.969282294A0D4A07.idx  uni-image-view.c.0C48C2063D71FA61.idx  uni-image-view.h.D17610E6A563AD30.idx  uni-nav.h.00C48A98AF4ED7AF.idx  uni-scroll-win.c.7908DFD170A75B9B.idx  uni-scroll-win.h.D08C740CC8428606.idx  uni-utils.c.A38AC12BAE93AEAE.idx  uni-utils.h.142117193BD490D2.idx  uni-zoom.h.62E8D52CF2FC1E1D.idx  vnr-crop.h.9B81D21A1E3993DD.idx  vnr-message-area.c.DC3F5AA6F61CEE5D.idx  vnr-message-area.h.A5460B7B1B6F38E0.idx  vnr-properties-dialog.h.B45E89B454DF2D92.idx  vnr-tools.c.F5C7C58753BC08DC.idx  vnr-tools.h.66B289D6ACCEF42C.idx  window.c.38C2A1D2C6DE439E.idx  window.h.394434E9B61DE451.idx  xfce-filename-input.h.232F2CEF1F99D305.idx
other/: 01temp.c  02temp.c  0temp.c  artturin-nixos.diff  grid.ui  vnr-crop-dialog-grid.ui  vnr-preferences-dialog-grid.ui  vnr-preferences-dialog.ui
po/: pt_BR.po
src/: dialog.c  dialog.h  file.c  file.h  main.c  meson.build  uni-anim-view.c  uni-anim-view.h  uni-cache.c  uni-cache.h  uni-dragger.c  uni-dragger.h  uni-exiv2.cpp  uni-exiv2.hpp  uni-image-view.c  uni-image-view.h  uni-nav.c  uni-nav.h  uni-scroll-win.c  uni-scroll-win.h  uni-utils.c  uni-utils.h  vnr-crop.c  vnr-crop.h  vnr-file.c  vnr-file.h  vnr-message-area.c  vnr-message-area.h  vnr-prefs.c  vnr-prefs.h  vnr-properties-dialog.c  vnr-properties-dialog.h  vnr-tools.c  vnr-tools.h  vnr-window.c  vnr-window.h  xfce-filename-input.c  xfce-filename-input.h
